# EtcdPilot

./: .gitignore  Dockerfile  LICENSE  README.en.md  README.md  README.zh-CN.md  docker-compose.yml
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: auth.rs  config.rs  db.rs  error.rs  etcd.rs  handlers.rs  main.rs  models.rs
config/: config.prod.toml  config.test.toml
docs/superpowers/plans/: 2026-06-29-etcd-observability.md
docs/superpowers/specs/: 2026-06-22-etcd-manager-design.md  2026-06-22-etcdpilot-design-zh.md  2026-06-29-etcd-observability-design-zh.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  api.ts  main.ts
frontend/src/components/: BrandIcon.vue  JsonFormView.vue  JsonTreeNode.vue  JsonTreeView.vue  LanguageSwitcher.vue  PathPrefixInput.vue  ValueEditor.vue
frontend/src/composables/: useGreeting.ts  useRoleLabel.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en-US.ts  zh-CN.ts
frontend/src/stores/: auth.ts
frontend/src/utils/: json.ts  jsonPath.ts  rememberLogin.ts
frontend/src/views/: AuditsView.vue  ClustersView.vue  DashboardView.vue  KeysView.vue  LeasesView.vue  LoginView.vue  ServicesView.vue
packaging/linux/: after-install.sh  after-remove.sh  build-rpm.sh  etcdpilot.service
packaging/macos/: build-pkg.sh
packaging/windows/: EtcdPilot.iss  build-installer.ps1
scripts/: package.ps1  sync-web.bat  sync-web.ps1
