[package]
name = "etcdpilot-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
etcd-client = "0.14"
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.37", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "uuid"] }
argon2 = "0.5"
rand = "0.8"
jsonwebtoken = "9.3"
time = { version = "0.3", features = ["std"] }
toml = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
validator = { version = "0.18", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
axum-extra = "0.9"

[features]
default = []
